================= Unreleased ==================
; Fixed ; Minor ; compiler ; #5530
Fixed crash bug in FMI XML generator where alias eliminated high order
temporary derivatives which were orphan caused problems.

; Fixed ; Minor ; Compiler ; #5529
Fixed bug in FMI XML generation where derivative attribute for second order
derivatives (or higher) pointed to the wrong variable.

================= Stable-2017-12-19 ==================
; Fixed ; Minor ; Compiler; #5526 
Fixed null pointer in evaluation of partial function

; Feature ; Major ; Compiler; #4797 
Support for string parameters

; Change ; Major ; Python ; #5167
Changed the default FMI version when compiling FMUs from Python to 2.0
instead of 1.0.

; Feature ; Minor ; PyFMI ; #5521
Added the possibility to directly retrieve a Scalar Variable class instance.

; Feature ; Minor ; Documentation; #5517 
Added information on OPC to Users Guide.

; Feature; Minor; Compiler ; #5516
Index added to variables and equations in blocks in HTML diagnostics.

; Fixed ; Minor ; Compiler ; #5514
Fixed problem with temporary generation for for-loop ranges

================= Stable-2017-11-29 ==================
; Change ; Minor ; Compiler ; #5513
Changed code generation to use hard coded values in the z-vector for 
performance.

; Fixed ; Minor ; Compiler ; #5487
Fixed some issues with relational expressions in arrays in records

; Feature ; Major ; Compiler, Runtime ; #5501
Added a memory pool to be used for dynamic allocations during evaluation
of the equations (significant speedup in cases with lots of dynamic
allocations).

; Change ; Minor ; Runtime ; #5505
Added the compiler flags -msse2 -mfpmath=sse for runtime builds using GCC,
the same are used for our FMUs.

; Fixed ; Minor ; Compiler ; #5503
Disabled automatic addition of derivatives for variables with state select set
to prefer if index reduction is disabled.

================= Stable-2017-11-10 ==================
; Change ; Minor ; Compiler ; #5497